--- a/SoloLearnProjects/webDevResume/style.css
+++ b/SoloLearnProjects/webDevResume/style.css
@@ -51,3 +51,10 @@ li b {
 li {
   margin-bottom: 5px;
 }
+footer a {
+  color: #e99f4b;
+  text-decoration: none;
+}
+footer a:hover {
+  text-decoration: underline;
+}
