--- a/SoloLearnProjects/webDevResume/style.css
+++ b/SoloLearnProjects/webDevResume/style.css
@@ -12,6 +12,7 @@ body {
   font-family: Arial;
   margin-top: 100px;
 }
+
 header {
   text-align: center;
   background-color: #eeeeee;
@@ -22,8 +23,14 @@ header {
   left: 0;
   width: 100%;
 }
+
 .summary img {
   float: right;
+  transition: transform 1s ease;
+}
+
+.summary img:hover {
+  transform: scale(1.3);
 }
 
 footer {
@@ -50,19 +57,24 @@ section,
 footer {
   padding: 2px 10px;
 }
+
 ul {
   margin: 0px;
 }
+
 li b {
   color: #2f5a78;
 }
+
 li {
   margin-bottom: 5px;
 }
+
 footer a {
   color: #e99f4b;
   text-decoration: none;
 }
+
 footer a:hover {
   text-decoration: underline;
 }
@@ -70,11 +82,13 @@ footer a:hover {
 table {
   border-collapse: collapse;
 }
+
 td,
 th {
   border: 1px solid #000000;
   padding: 5px;
 }
+
 th {
   background-color: #2f5a78;
   color: #ffffff;
@@ -87,16 +101,19 @@ input[type='email'] {
   padding: 5px;
   margin-bottom: 5px;
 }
+
 textarea {
   border: 1px solid #2f5a78;
   width: 203px;
   padding: 5px;
   margin-bottom: 5px;
 }
+
 label {
   font-weight: bold;
   color: #2f5a78;
 }
+
 input[type='submit'] {
   background-color: #2f5a78;
   border: none;
